Refresh documentation for CQEngine 4.0
Continue the existing user documentation and release notes with Java compatibility, artifact selection, security boundaries, persistence migration, benchmark interpretation, contribution, and release guidance.

Signed-off-by: Shuaib Rao <99695611+shuaibrao@users.noreply.github.com>